--- a/jump.html
+++ b/jump.html
@@ -1,9 +1,13 @@
 <!docType html>
 <html>
-<head>
-function test() {
-  alert("mytest");
-}
-</head>
-<input type="button" value="test" onclick="test();" />
+  <head>
+    <script>
+      function test() {
+        alert("mytest");
+      }
+    </script>
+  </head>
+  <body>
+    <input type="button" value="test" onclick="test();" />
+  </body>
 </html>
