--- a/jump.html
+++ b/jump.html
@@ -8,6 +8,8 @@
     </script>
   </head>
   <body>
-    <input type="button" value="test" onclick="test();" />
+    <input type="button" value="test" onclick="test();" /><br>
+    
+    <input type="button" value="test2" onclick="test();" />
   </body>
 </html>
